--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>jQuery+RequireJS Sample Page</title>
+        <title>Board Game Online</title>
         <!-- This is a special version of jQuery with RequireJS built-in -->
         <script data-main="scripts/main" src="scripts/require-jquery.js"></script>
+        <link rel="stylesheet" href="scripts/scripts.css" type="text/css" />
     </head>
-    <body></body>
+    <body>
+        <div class="anchor" style="position: absolute; top: 0px; left: 0px; width: 0px; heigth: 0px;"></div>
+    </body>
 </html>
