socket io en place

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <title>Board Game Online</title>
         <!-- This is a special version of jQuery with RequireJS built-in -->
         <script data-main="scripts/main" src="scripts/require-jquery.js"></script>
-        <link rel="stylesheet" href="scripts/scripts.css" type="text/css" />
+        <link rel="stylesheet" href="styles/styles.css" type="text/css" />
     </head>
     <body>
         <div class="anchor" style="position: absolute; top: 0px; left: 0px; width: 0px; heigth: 0px;"></div>
