--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <!-- This is a special version of jQuery with RequireJS built-in -->
         <script data-main="scripts/main" src="scripts/libs/require-1.0.2.js"></script>
         <link rel="stylesheet" href="styles/styles.css" type="text/css" />
+        <link rel="stylesheet" href="styles/ui-lightness/jquery-ui-1.8.16.custom.css" type="text/css" />
     </head>
     <body>
         <div class="anchor" style="position: absolute; top: 0px; left: 0px; width: 0px; heigth: 0px;"></div>
